# adventofcode

1/: 1.sh  2.sh
10/: 1.py  2.py
11/: 2.py
12/: 2.py
13/: 1.py  2.py
14/: 1.py
15/: 1.py
16/: 1.py
17/: 2.py
18/: 1.py  sample.txt
19/: 1.py  1.sh  2.py  final_regexp
2/: 1.sh  2.sh
20/: 1.py  2.py
2015/01/: part1.sh  part2.py
2015/02/: part1.py  part2.py
2015/03/: part1.py  part2.py
2015/04/: part1.sh
2015/05/: part1.py  part2.py
2015/06/: Cargo.toml
2015/06/src/: main.rs
2015/07/: part1.py  part2.sh  sample1.txt
2015/08/: part1.sh  part2.sh
2015/09/: Cargo.toml
2015/10/: part1.py  part2.py
2015/11/: part1.py  part2.py
2015/12/: part1.sh
2015/13/: part1.py
2015/14/: part1.py  part2.py
2015/15/: part1.py  part2.py
2015/16/: Cargo.toml
2015/17/: Cargo.toml
2020/11/: 1.py
2020/12/: 1.py
2020/13/: 2.py
2020/14/: 2.py
2020/15/: 2.py
2020/16/: 2.py
2020/17/: 1.py
2020/18/: 1.sh  2.py  2.sh
2020/19/: 2.py  2.sh  valid_sample2_regex
2020/2/: 2.sh  sample2.txt
2020/20/: 1.py
2020/21/: 2.py
2020/22/: 1.py  2.py
2020/23/: 1.py  2.c  2_2.c  2_4.c
2020/24/: 1.py  2.py
2020/5/: 1.py
2020/6/: 2.py
2020/7/: 2.py
2020/8/: 2.py
2020/9/: 1.py  2.py
2021/day1/: Cargo.toml
2021/day16/: Cargo.toml
2021/day16/src/: main.rs
2022/06/: Cargo.toml
2022/06/benches/: part2.rs
2022/06/src/: solution.rs
2022/17/: Cargo.toml
2022/17/benches/: part1.rs
2022/17/src/: solution.rs
21/: 1.pro  1.py
22/: 2.py
23/: 2.c  2.py  2_2.c  2_3.c  2_4.c
3/: 1.py  2.py
4/: 1.py  2.py
5/: 2.py
6/: 1.py
7/: 1.py
8/: 1.py
9/: 2.py
(+179 files in other folders)
