[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
cached = "0.26.2"
binascii = "0.1.4"
bitreader = "0.3.4"

[dev-dependencies]
test-case = { version = "1", features = ["hamcrest_assertions"] }
hamcrest2 = "0.3.0"
